--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                 <li><a href="#experience" class="hover:text-gray-300">Experience</a></li>
                 <li><a href="#projects" class="hover:text-gray-300">Projects</a></li>
                 <li><a href="#skills" class="hover:text-gray-300">Skills</a></li>
+                <li><a href="#education" class="hover:text-gray-300">Education</a></li>
+                <li><a href="#certifications" class="hover:text-gray-300">Certifications</a></li>
                 <li><a href="#contact" class="hover:text-gray-300">Contact</a></li>
             </ul>
         </nav>
@@ -24,8 +26,14 @@
     <main>
         <section id="hero" class="bg-gray-700 text-white py-20">
             <div class="container mx-auto text-center">
-                <h2 class="text-4xl font-bold mb-4">Cybersecurity Professional</h2>
+                <h2 class="text-4xl font-bold mb-4">Aditya Nagariya</h2>
+                <p class="text-2xl mb-4">Cybersecurity Professional</p>
                 <p class="text-xl mb-8">Protecting digital assets through ethical hacking and penetration testing</p>
+                <div class="flex justify-center space-x-4 mb-8">
+                    <a href="mailto:adityanagariyav@gmail.com" class="hover:text-gray-300"><i class="fas fa-envelope"></i> adityanagariyav@gmail.com</a>
+                    <a href="tel:+919998272527" class="hover:text-gray-300"><i class="fas fa-phone"></i> +91 9998272527</a>
+                    <span><i class="fas fa-map-marker-alt"></i> Rajkot, IN</span>
+                </div>
                 <a href="#contact" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded">Get in Touch</a>
             </div>
         </section>
@@ -34,10 +42,10 @@
             <div class="container mx-auto">
                 <h2 class="text-3xl font-bold mb-8 text-center">About Me</h2>
                 <div class="flex flex-col md:flex-row items-center">
-                    <img src="https://photos.app.goo.gl/WyGKCrPPSJxyaniF7" alt="Aditya Nagariya" class="w-64 h-64 rounded-full mb-8 md:mb-0 md:mr-8">
+                    <img src="/api/placeholder/300/300" alt="Aditya Nagariya" class="w-64 h-64 rounded-full mb-8 md:mb-0 md:mr-8">
                     <div>
                         <p class="text-lg mb-4">Proactive and detail-oriented cybersecurity professional with hands-on experience in ethical hacking, penetration testing, and system security analysis. Adept in identifying vulnerabilities, conducting network traffic analysis, and implementing mitigation strategies.</p>
-                        <p class="text-lg">Deep understanding of network fundamentals, OSI model, and VPN. Proficient in cybersecurity tools like Nmap, Wireshark, and TCPDump, and skilled in configuring Linux (Kali, Parrot) and Mac OS systems.</p>
+                        <p class="text-lg">Deep understanding of network fundamentals, OSI model, and VPN. Proficient in cybersecurity tools like Nmap, Wireshark, and TCPDump, and skilled in configuring Linux (Kali, Parrot) and Mac OS systems. Actively engaged in self-learning and solving real-world security challenges.</p>
                     </div>
                 </div>
             </div>
@@ -51,18 +59,35 @@
                         <h3 class="text-xl font-bold mb-2">Self-Learning and Independent Study in Cybersecurity</h3>
                         <p class="text-gray-600 mb-4">April 2024 - Present | Remote</p>
                         <ul class="list-disc list-inside">
-                            <li>Performed subdomain enumeration and vulnerability assessments</li>
-                            <li>Utilized tools like Nmap, Burp Suite, and Wireshark for network analysis</li>
-                            <li>Gained proficiency in navigating operating systems through CLI and UI</li>
+                            <li>Performed subdomain enumeration and vulnerability assessments to identify and mitigate security risks.</li>
+                            <li>Utilized tools like Nmap, Burp Suite, and Wireshark for comprehensive network traffic analysis and penetration testing.</li>
+                            <li>Gained proficiency in navigating operating systems through CLI and UI, configuring Linux distributions (Kali, Parrot), and troubleshooting system issues.</li>
+                            <li>Mastered file permissions, installation of software, and system configurations to ensure security compliance.</li>
                         </ul>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow">
                         <h3 class="text-xl font-bold mb-2">Hack The Box Academy Student</h3>
                         <p class="text-gray-600 mb-4">June 2024 - Present | Remote</p>
                         <ul class="list-disc list-inside">
-                            <li>Ranked in the top 20% by successfully compromising targets</li>
-                            <li>Enhanced knowledge of Linux systems and penetration testing</li>
-                            <li>Applied skills in using Wireshark, TCPDump, and ARP for traffic analysis</li>
+                            <li>Ranked in the top 20% by successfully compromising targets on Hack The Box, simulating real-world hacking scenarios.</li>
+                            <li>Enhanced knowledge of Linux systems, penetration testing preparation, and hypervisors like VMware.</li>
+                            <li>Applied skills in using Wireshark, TCPDump, and ARP for traffic analysis, as well as performing DNS queries and analyzing traffic anomalies using tools like dig and nslookup.</li>
+                        </ul>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow">
+                        <h3 class="text-xl font-bold mb-2">Cybersecurity Intern</h3>
+                        <p class="text-gray-600 mb-4">October 2023 - November 2023 | Edunet by IBM, Remote</p>
+                        <ul class="list-disc list-inside">
+                            <li>Researched and implemented advanced steganography techniques for secure digital communication.</li>
+                            <li>Worked with SSL/TLS protocols to enhance encryption and secure data transmission across networks.</li>
+                        </ul>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow">
+                        <h3 class="text-xl font-bold mb-2">Student Researcher</h3>
+                        <p class="text-gray-600 mb-4">April 2024 - Present | Try Hack Me, Remote</p>
+                        <ul class="list-disc list-inside">
+                            <li>Participated in advanced penetration testing labs, covering SQL injection, brute force attacks, and network enumeration.</li>
+                            <li>Utilized tools such as nmap, ping, traceroute, and hping to perform network scanning and vulnerability assessments.</li>
                         </ul>
                     </div>
                 </div>
@@ -75,14 +100,21 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <div class="bg-gray-100 p-6 rounded-lg">
                         <h3 class="text-xl font-bold mb-2">Steganography using Python</h3>
-                        <p>Integrated AES-256 encryption to securely embed messages within images using Python, ensuring the integrity of sensitive data.</p>
+                        <p class="mb-4">November 2023</p>
+                        <ul class="list-disc list-inside">
+                            <li>Integrated AES-256 encryption to securely embed messages within images using Python</li>
+                            <li>Applied PBKDF2 with SHA-256 for enhanced security</li>
+                            <li>Utilized PyQt5 for GUI design, resulting in a user-friendly tool</li>
+                        </ul>
                     </div>
                     <div class="bg-gray-100 p-6 rounded-lg">
                         <h3 class="text-xl font-bold mb-2">Clima — Weather App</h3>
+                        <p class="mb-4">December 2022</p>
                         <p>Built a Flutter-based weather application that retrieves real-time data using the OpenWeatherMap API, focusing on secure API handling.</p>
                     </div>
                     <div class="bg-gray-100 p-6 rounded-lg">
                         <h3 class="text-xl font-bold mb-2">Book-App</h3>
+                        <p class="mb-4">February 2024</p>
                         <p>Developed a RESTful API using Express.js and MongoDB, ensuring secure CRUD operations and implementing CORS for cross-origin request security.</p>
                     </div>
                 </div>
@@ -97,10 +129,12 @@
                         <h3 class="text-xl font-bold mb-4">Technical Skills</h3>
                         <ul class="list-disc list-inside">
                             <li>Operating Systems: Linux (Kali, Parrot), Mac OS</li>
-                            <li>Networking: IP addressing, Subnetting, TCP/IP, OSI Model</li>
-                            <li>Security Tools: Nmap, Wireshark, TCPDump, ARP</li>
+                            <li>Networking: IP addressing, Subnetting, Public/Private IP, TCP/IP, OSI Model, network topologies, VPN, SSH, RDP</li>
+                            <li>Security Tools: Nmap, Wireshark, TCPDump, ARP, Ping, Traceroute, Netstat, Iptables, nslookup, hping</li>
                             <li>Protocols: DHCP, DNS, HTTP/HTTPS, FTP, SFTP, SSL/TLS</li>
-                            <li>Development: Python, SQL, JavaScript, MERN-Stack, Flutter</li>
+                            <li>Network Devices: Routers, Switches</li>
+                            <li>Development: Python, SQL, JavaScript, HTML/CSS, MERN-Stack, Flutter</li>
+                            <li>Cybersecurity Fundamentals: Cyber Kill Chain, network scanning, port scanning, Wi-Fi security</li>
                         </ul>
                     </div>
                     <div>
@@ -112,6 +146,55 @@
                             <li>Creativity</li>
                             <li>Patience</li>
                         </ul>
+                        <h3 class="text-xl font-bold mt-6 mb-4">Other Skills</h3>
+                        <ul class="list-disc list-inside">
+                            <li>Data Structures & Algorithms</li>
+                            <li>Prompt Engineering (ChatGPT)</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="education" class="py-16 bg-white">
+            <div class="container mx-auto">
+                <h2 class="text-3xl font-bold mb-8 text-center">Education</h2>
+                <div class="space-y-8">
+                    <div class="bg-gray-100 p-6 rounded-lg">
+                        <h3 class="text-xl font-bold mb-2">Bachelor of Computer Science & Engineering</h3>
+                        <p class="text-gray-600 mb-2">August 2021 - May 2025 | Darshan University</p>
+                        <p class="mb-2">CGPA: 6.98</p>
+                        <p>Relevant Coursework: Data Structures, Algorithms, Operating Systems, Cybersecurity, Computer Networks, DBMS</p>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg">
+                        <h3 class="text-xl font-bold mb-2">High School (Science, Group A)</h3>
+                        <p class="text-gray-600 mb-2">April 2019 - October 2021 | Shree N.P. Bhalodya High School</p>
+                        <p class="mb-2">Grade: 72%</p>
+                        <p>Focused on: Physics, Chemistry, Mathematics</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="certifications" class="py-16 bg-gray-100">
+            <div class="container mx-auto">
+                <h2 class="text-3xl font-bold mb-8 text-center">Certifications</h2>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                    <div class="bg-white p-6 rounded-lg shadow">
+                        <h3 class="text-xl font-bold mb-2">Hack The Box Academy Certifications (Linux Fundamentals)</h3>
+                        <p class="text-gray-600">June 2024</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow">
+                        <h3 class="text-xl font-bold mb-2">Cybersecurity Fundamentals (IBM SkillsBuild)</h3>
+                        <p class="text-gray-600">September 2023 - November 2023</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow">
+                        <h3 class="text-xl font-bold mb-2">Prompt Engineering for ChatGPT (Vanderbilt University)</h3>
+                        <p class="text-gray-600">December 2022</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow">
+                        <h3 class="text-xl font-bold mb-2">SQL Certification (TestDome)</h3>
+                        <p class="text-gray-600">June 2022</p>
                     </div>
                 </div>
             </div>
@@ -147,6 +230,12 @@
                 <a href="https://linkedin.com/in/aditya-nagariya-veni-vidi-vici" target="_blank" class="hover:text-gray-300"><i class="fab fa-linkedin fa-2x"></i></a>
                 <a href="https://github.com/Aditya-Nagariya" target="_blank" class="hover:text-gray-300"><i class="fab fa-github fa-2x"></i></a>
             </div>
+            <p class="mb-2">Aditya Nagariya | Cybersecurity Professional</p>
+            <p class="mb-2">
+                <i class="fas fa-envelope mr-2"></i> adityanagariyav@gmail.com |
+                <i class="fas fa-phone mr-2"></i> +91 9998272527 |
+                <i class="fas fa-map-marker-alt mr-2"></i> Rajkot, IN
+            </p>
             <p>&copy; 2024 Aditya Nagariya. All rights reserved.</p>
         </div>
     </footer>
