--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="container mx-auto">
                 <h2 class="text-3xl font-bold mb-8 text-center">About Me</h2>
                 <div class="flex flex-col md:flex-row items-center">
-                    <img src="/api/placeholder/300/300" alt="Aditya Nagariya" class="w-64 h-64 rounded-full mb-8 md:mb-0 md:mr-8">
+                    <img src="../my_photo.jpg" alt="Aditya Nagariya" class="w-64 h-64 rounded-full mb-8 md:mb-0 md:mr-8">
                     <div>
                         <p class="text-lg mb-4">Proactive and detail-oriented cybersecurity professional with hands-on experience in ethical hacking, penetration testing, and system security analysis. Adept in identifying vulnerabilities, conducting network traffic analysis, and implementing mitigation strategies.</p>
                         <p class="text-lg">Deep understanding of network fundamentals, OSI model, and VPN. Proficient in cybersecurity tools like Nmap, Wireshark, and TCPDump, and skilled in configuring Linux (Kali, Parrot) and Mac OS systems. Actively engaged in self-learning and solving real-world security challenges.</p>
